# admin-panel-old

./: .env.example  .gitignore  .gitmodules  ASSEMBLY_PLAN.md  DOCKER_USAGE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  manifest.yaml  mongo-init.js  nginx-dev.conf  sonar-project.properties
backend/: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Pipfile  docker-entrypoint.py  main.py  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  seed_database.py
backend/config/: config.json  dev.json  localenv-dev.json  localenv-production.json  localenv-stage.json  production.json  stage.json  test_data.json
backend/config/{environment.jira.ssl.bundle_path}/: {environment.jira.ssl.bundle_file_name}
backend/docs/: CONFIGURATIONS.md
backend/easylifeauth/: app.py
backend/src/: __init__.py  main.py
backend/tests/: conftest.py  mock_data.py  test_access_control.py  test_access_control_rbac.py  test_activity_log_routes.py  test_activity_log_service.py  test_admin_routes.py  test_admin_service.py  test_api_auth.py  test_api_config_routes.py  test_api_config_service.py  test_api_domains.py  test_api_groups.py  test_api_health.py  test_api_roles.py  test_api_users.py  test_apigee_identity_middleware.py  test_app.py  test_app_exception_handlers.py  test_atlassian_lookup_routes.py  test_atlassian_lookup_service.py  test_bulk_upload_routes.py  test_bulk_upload_service.py  test_config_integration.py  test_config_pipeline.py  test_config_values.py  test_configurations_routes.py  test_constants.py  test_coverage_gaps.py  test_customers_routes.py  test_dashboard_routes.py  test_db_config_placeholder.py  test_db_manager.py  test_dependencies.py  test_distribution_list_routes.py  test_distribution_list_service.py  test_domain_access.py  test_domain_scenarios_routes.py  test_domain_service.py  test_easyweaver_adapter.py  (+43 more)
(+556 files in other folders)
